fix: Fixed gear waves animation delay and z-index

--- a/src/styles/gearSystem.scss
+++ b/src/styles/gearSystem.scss
@@ -25,18 +25,24 @@ $animationMode: ease;
     width: 100%;
     height: 100%;
     position: absolute;
+    z-index: -1;
     inset: 0;
     box-shadow: .4rem .4rem .8rem #e0e0e0, 
     -.4rem -.4rem .8rem white;
     border-radius: 50%;
-    animation: waving 6s linear infinite;
+
     background: transparent;
     filter: blur(2px);
-    &:nth-of-type(2){
-      animation-delay: 2s;
-    }
-    &:nth-of-type(3){
-      animation-delay: 4s;
+    opacity: 0;
+    &.active{
+      animation: waving 6s linear infinite;
+      opacity: 1;
+      &:nth-of-type(2){
+        animation-delay: 2s;
+      }
+      &:nth-of-type(3){
+        animation-delay: 4s;
+      }
     }
   }
   @keyframes waving {
